--- a/index.html
+++ b/index.html
@@ -10,9 +10,133 @@
     <div class="container">
       <div class="title-box">
         <h1>memory</h1>
-        <p>test your short-term memory</p>
+        <p>
+          This jungle is alive with critters. Try and find all the matching
+          pairs out there, explorer!
+        </p>
       </div>
       <!-- <div class="gameboard">
+        <div class="card">
+          <div class="card-inner flipped matched">
+            <div class="card-front"></div>
+            <div class="card-back">
+              <svg class="icon icon-giraffe">
+                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-inner flipped matched">
+            <div class="card-front"></div>
+            <div class="card-back">
+              <svg class="icon icon-giraffe">
+                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-inner flipped matched">
+            <div class="card-front"></div>
+            <div class="card-back">
+              <svg class="icon icon-giraffe">
+                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-inner flipped matched">
+            <div class="card-front"></div>
+            <div class="card-back">
+              <svg class="icon icon-giraffe">
+                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-inner flipped matched">
+            <div class="card-front"></div>
+            <div class="card-back">
+              <svg class="icon icon-giraffe">
+                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-inner flipped matched">
+            <div class="card-front"></div>
+            <div class="card-back">
+              <svg class="icon icon-giraffe">
+                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-inner flipped matched">
+            <div class="card-front"></div>
+            <div class="card-back">
+              <svg class="icon icon-giraffe">
+                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-inner flipped matched">
+            <div class="card-front"></div>
+            <div class="card-back">
+              <svg class="icon icon-giraffe">
+                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-inner flipped matched">
+            <div class="card-front"></div>
+            <div class="card-back">
+              <svg class="icon icon-giraffe">
+                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-inner flipped matched">
+            <div class="card-front"></div>
+            <div class="card-back">
+              <svg class="icon icon-giraffe">
+                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-inner flipped matched">
+            <div class="card-front"></div>
+            <div class="card-back">
+              <svg class="icon icon-giraffe">
+                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+
         <div class="card">
           <div class="card-inner flipped matched">
             <div class="card-front"></div>
