more responsive + timing issue flips fixed

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <div class="container">
       <div class="title-box">
         <h1>memory</h1>
-        <p>
-          This jungle is alive with critters. Try and find all the matching
-          pairs out there, explorer!
-        </p>
+        <p>Hold on to your binoculars, explorer, this jungle is alive!</p>
       </div>
+
       <!-- <div class="gameboard">
         <div class="card">
           <div class="card-inner flipped matched">
