--- a/icons/demo-external-svg.html
+++ b/icons/demo-external-svg.html
@@ -17,22 +17,22 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-panda"><use xlink:href="symbol-defs.svg#icon-panda"></use></svg><span class="name"> icon-panda</span>
+                <svg class="icon icon-tiger"><use xlink:href="symbol-defs.svg#icon-tiger"></use></svg><span class="name"> icon-tiger</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-bird"><use xlink:href="symbol-defs.svg#icon-bird"></use></svg><span class="name"> icon-bird</span>
+                <svg class="icon icon-pig"><use xlink:href="symbol-defs.svg#icon-pig"></use></svg><span class="name"> icon-pig</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-cat"><use xlink:href="symbol-defs.svg#icon-cat"></use></svg><span class="name"> icon-cat</span>
+                <svg class="icon icon-snake"><use xlink:href="symbol-defs.svg#icon-snake"></use></svg><span class="name"> icon-snake</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-dog"><use xlink:href="symbol-defs.svg#icon-dog"></use></svg><span class="name"> icon-dog</span>
+                <svg class="icon icon-crocodile"><use xlink:href="symbol-defs.svg#icon-crocodile"></use></svg><span class="name"> icon-crocodile</span>
             </div>
         </div>
         <div class="glyph fs1">
@@ -42,27 +42,27 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-giraffe"><use xlink:href="symbol-defs.svg#icon-giraffe"></use></svg><span class="name"> icon-giraffe</span>
+                <svg class="icon icon-hamster"><use xlink:href="symbol-defs.svg#icon-hamster"></use></svg><span class="name"> icon-hamster</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-horse"><use xlink:href="symbol-defs.svg#icon-horse"></use></svg><span class="name"> icon-horse</span>
+                <svg class="icon icon-ant"><use xlink:href="symbol-defs.svg#icon-ant"></use></svg><span class="name"> icon-ant</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-native"><use xlink:href="symbol-defs.svg#icon-native"></use></svg><span class="name"> icon-native</span>
+                <svg class="icon icon-bat"><use xlink:href="symbol-defs.svg#icon-bat"></use></svg><span class="name"> icon-bat</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-tiger"><use xlink:href="symbol-defs.svg#icon-tiger"></use></svg><span class="name"> icon-tiger</span>
+                <svg class="icon icon-bear"><use xlink:href="symbol-defs.svg#icon-bear"></use></svg><span class="name"> icon-bear</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-wolf"><use xlink:href="symbol-defs.svg#icon-wolf"></use></svg><span class="name"> icon-wolf</span>
+                <svg class="icon icon-bird"><use xlink:href="symbol-defs.svg#icon-bird"></use></svg><span class="name"> icon-bird</span>
             </div>
         </div>
   </div>
