--- a/index.html
+++ b/index.html
@@ -12,140 +12,7 @@
         <h1>memory</h1>
         <p>Hold on to your binoculars, explorer, this jungle is alive!</p>
       </div>
-
-      <!-- <div class="gameboard">
-        <div class="card">
-          <div class="card-inner flipped matched">
-            <div class="card-front"></div>
-            <div class="card-back">
-              <svg class="icon icon-giraffe">
-                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-inner flipped matched">
-            <div class="card-front"></div>
-            <div class="card-back">
-              <svg class="icon icon-giraffe">
-                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-inner flipped matched">
-            <div class="card-front"></div>
-            <div class="card-back">
-              <svg class="icon icon-giraffe">
-                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-inner flipped matched">
-            <div class="card-front"></div>
-            <div class="card-back">
-              <svg class="icon icon-giraffe">
-                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-inner flipped matched">
-            <div class="card-front"></div>
-            <div class="card-back">
-              <svg class="icon icon-giraffe">
-                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-inner flipped matched">
-            <div class="card-front"></div>
-            <div class="card-back">
-              <svg class="icon icon-giraffe">
-                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-inner flipped matched">
-            <div class="card-front"></div>
-            <div class="card-back">
-              <svg class="icon icon-giraffe">
-                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-inner flipped matched">
-            <div class="card-front"></div>
-            <div class="card-back">
-              <svg class="icon icon-giraffe">
-                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-inner flipped matched">
-            <div class="card-front"></div>
-            <div class="card-back">
-              <svg class="icon icon-giraffe">
-                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-inner flipped matched">
-            <div class="card-front"></div>
-            <div class="card-back">
-              <svg class="icon icon-giraffe">
-                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-inner flipped matched">
-            <div class="card-front"></div>
-            <div class="card-back">
-              <svg class="icon icon-giraffe">
-                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-inner flipped matched">
-            <div class="card-front"></div>
-            <div class="card-back">
-              <svg class="icon icon-giraffe">
-                <use xlink:href="./icons/symbol-defs.svg#icon-giraffe"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-      </div> -->
+      <!-- THIS IS WHERE ALL THE FUN GOES -->
     </div>
     <script src="./build/js/bundle.js"></script>
   </body>
